--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,12 +8,12 @@
     <meta property='og:description' content='Scheduler for volleyball games built using JavaScript + React + Redux (Front-End) & Express + Sequelize + PostgreSQL (Back-End)'/>
     <meta property="og:image:width" content="3090" />
     <meta property="og:image:height" content="1968" />
-    <meta property='og:url' content='https://redux-fs.herokuapp.com/'/>
-    <title>reduxFsTemplate</title>
+    <meta property='og:url' content='https://volleyball-meetup.herokuapp.com/'/>
+    <title>Volleyball-meetup</title>
     <meta name="author" content="Aaron C & Peter K">
     <link rel="icon" type="image/png" href='./alt-logo.png'>
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   </head>
 
   <body>
