Change "game" to "event" on Home component.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,13 +4,13 @@
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="utf-8" />
-    <meta property='og:title' content='sports meetup'/>
+    <meta property='og:title' content='pickup sports'/>
     <meta property='og:image' content="https://lh3.googleusercontent.com/usoo6FtAt6dbJ9bqGQCANM4OiQ7C17NdV48AAFPU0Y1RmwydRoN42NiVCF1PYseLbZIxDVXswQCbZ6AjWrzPnkGe3mQ2Mt43mUAPYs-jAoWs8YyRbqPrnlc2iqhlIqdt8b7_giC6lA=w600-h315-p-k" />
-    <meta property='og:description' content='Scheduler for pickup games built using JavaScript + React + Redux (Front-End) & Express + Sequelize + PostgreSQL (Back-End)'/>
+    <meta property='og:description' content='Scheduler for pickup events built using JavaScript/React/Bootstrap/PostgreSQL/Node/Express/Sequelize'/>
     <meta property="og:image:width" content="3090" />
     <meta property="og:image:height" content="1968" />
-    <meta property='og:url' content='https://volleyball-meetup.herokuapp.com/'/>
-    <title>Sports-meetup</title>
+    <meta property='og:url' content='https://pickup-sports-events.herokuapp.com/'/>
+    <title>Pickup sports</title>
     <meta name="author" content="Aaron C & Peter K">
     <link rel="icon" type="image/png" href='./alt-logo.png'>
 
