Start removing Container component (which needs NOT to be needed).

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div id="root"></div>
-    <div id="container"></div>
+    <!-- <div id="container"></div> -->
   </body>
 
 </html>
